updated services and functions

--- a/src/app/Admin/Client/client-list/client-list.component.html
+++ b/src/app/Admin/Client/client-list/client-list.component.html
@@ -41,7 +41,7 @@
                             <td scope="row">{{client.initials}}</td>
                             <td scope="row">{{client.surname}}</td>
                             <td scope="row">
-                              <button class="btn btn-outline-primary" (click)="editClient(client)">View</button>
+                              <button class="btn btn-outline-primary" (click)="editClient(client)">Edit</button>
                               <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteClient(client)" >Delete</button>
                             </td>
                           </tr>
