--- a/src/app/Admin/ClientEnquiry/client-enquiry-detail/client-enquiry-detail.component.html
+++ b/src/app/Admin/ClientEnquiry/client-enquiry-detail/client-enquiry-detail.component.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-6">
-                            <h5>Enquiry Type</h5>{{enquiryData?.enquiryType}}
+                            <h5>Enquiry Type:</h5>{{enquiryData?.enquiryType}}
                         </div>
                     </div>
                     <div class="row">
