--- a/src/app/client-sub-system/order-detail/order-detail.component.html
+++ b/src/app/client-sub-system/order-detail/order-detail.component.html
@@ -42,7 +42,7 @@
       <div class="row mt-5">
         <div class="card">
           <div class="card-header ">
-            <h5>Order Summery</h5>
+            <h5>Order Summary</h5>
           </div>
           <div class="card-body">
             <div class="row">
@@ -86,7 +86,7 @@
       <div class=" row mt-5">
         <div class="card">
             <div class="card-header ">
-              <h5>Delivry Type</h5>{{orderData?.deliveryType}}
+              <h5>Delivery Type</h5>{{orderData?.deliveryType}}
             </div>
           </div>
       </div>
