--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/enquiry/detail'" *ngIf="roles.includes('enquiry management')">Enquiries</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/list'" *ngIf="roles.includes('product management')">Products</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/size/detail'" *ngIf="roles.includes('product size management')">Add Product Size</a></li>
-                            <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/type/detail'" *ngIf="roles.includes('product type management')">Add Products Type</a></li>
+                            <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/type/detail'" *ngIf="roles.includes('product type management')">Add Product Type</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/stock/detail'" *ngIf="roles.includes('stock management')">Stock</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/audit'" *ngIf="roles.includes('audit management')">Audit</a></li>
                             <li><a [routerLink]="'/admin/enquiry-type-detail'" class="link-dark rounded" *ngIf="roles.includes('enquiry type management')">Enquiry Type</a></li>
