--- a/src/app/Admin/components/admin-detail/admin-detail.component.html
+++ b/src/app/Admin/components/admin-detail/admin-detail.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-lg-4 col-md-3 col-sm-6 col-12">
         <span class="input-group" style="float: right;">
-          <input type="text" class="form-control" placeholder="Username" aria-label="Username" [(ngModel)]="searchTerm"
+          <input type="text" class="form-control" placeholder="Search for a specific admin" aria-label="Username" [(ngModel)]="searchTerm"
             aria-describedby="basic-addon1">
           <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
         </span>
