--- a/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
+++ b/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
@@ -28,7 +28,7 @@
                               </div>
                               <div class="row form-group">
                                 <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-                                  <label >Category:</label>
+                                  <label >Product Type:</label>
                                   <input type="text" class="form-control" readonly="readonly" formControlName="productTypeId">
                                 </div>
                               </div>
