--- a/src/app/Admin/Audit/audit/audit.component.html
+++ b/src/app/Admin/Audit/audit/audit.component.html
@@ -7,7 +7,7 @@
       <div class="col-3"></div>
       <div class="col-lg-4 col-md-3 col-sm-6 col-12">
         <span class="input-group" style="float: right;">
-            <input type="text" class="form-control" placeholder="Search username" aria-label="date" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+            <input type="text" class="form-control" placeholder="Search the username here" aria-label="date" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
             <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="searchByName()" >Search</button>
             <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="getAuditDetail()" >View All</button>
         </span>
