--- a/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
+++ b/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
@@ -50,7 +50,7 @@
                   <thead  style="background-color: rgb(103, 186, 241);">
                     <tr>
                       <th scope="col">Product Name</th>
-                      <th scope="col">Category</th>
+                      <th scope="col">Product Type</th>
                       <th scope="col">Size</th>
                       <th scope="col">Price</th>
                       <th scope="col">Ordered Quantity</th>
