--- a/src/app/Admin/Stock/stock-detail/stock-detail.component.html
+++ b/src/app/Admin/Stock/stock-detail/stock-detail.component.html
@@ -9,8 +9,7 @@
         </div>
       <div class="col-lg-4 col-md-3 col-sm-6 col-12">
           <span class="input-group" style="float: right;">
-              <input type="text" class="form-control" placeholder="Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
-              <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
+             
           </span>
       </div>
       <div class="col-2">
@@ -29,7 +28,7 @@
                       <thead  style="background-color: rgb(103, 186, 241);">
                         <tr>
                           <th scope="col">Product Name</th>
-                          <th scope="col">Category</th>
+                          <th scope="col">Product Type</th>
                           <th scope="col">Size</th>
                           <th scope="col">Price</th>
                           <th scope="col">Quantity</th>
