--- a/src/app/Employee/add-employee/add-employee.component.html
+++ b/src/app/Employee/add-employee/add-employee.component.html
@@ -34,7 +34,7 @@
                                             </span>
               </div>
             </div>
-            <div class="row form-group">
+            <div class="row form-group" *ngIf="employeeId==0">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Password:</label>
                 <input type="password" 
@@ -55,7 +55,7 @@
                                             </span>
               </div>
             </div>
-            <div class="row form-group">
+            <div class="row form-group" *ngIf="employeeId==0">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Confirm Password:</label>
                 <input type="password" 
@@ -159,6 +159,24 @@
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Cell Number:</label>
+                <input type="text" 
+                    class="form-control" 
+                    formControlName="cellNumber" 
+                    placeholder="cellNumber"
+                    [ngClass]="{'is-invalid': (employeeDetailForm.get('cellNumber')?.touched ||
+                    employeeDetailForm.get('email')?.dirty) &&
+                                            !employeeDetailForm.get('cellNumber')?.valid }">
+                                            <span class="invalid-feedback">
+                                              <span *ngIf="employeeDetailForm.get('cellNumber')?.errors?.required">
+                                                Please your cell Number.
+                                              </span>
+                                            </span>
+              </div>
+            </div>
+
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>ID Number:</label>
                 <input type="text" 
                 class="form-control" 
@@ -181,18 +199,16 @@
               <div class="col-lg-4 col-md-3 col-sm-2 col-12">
                   <input style="display: none;" type="file" id="employeeImage"
                       (change)="uploadImage($event)" #file>
-                  <button style=" color:rgb(252, 250, 250);" type="button" class="btn btn-primary" (click)="file.click()">Upload Image<i
+                  <button style=" color:rgb(252, 250, 250);" type="button" class="btn btn-primary" (click)="file.click()">Upload Image from device<i
                           class="fas fa-upload mg-l-10"></i></button>
+                          <button class="btn btn-warning" (click)="triggerSnapshot();">Take Image with camera</button>
+
               </div>
               <div class="col-lg-8 col-md-6 col-sm-5 col-12">
               <webcam [height]="500" [width]="500" [trigger]="triggerObservable" (imageCapture)="handleImage($event)"></webcam>
                 <!-- Button Takes Photo -->
-                <button class="btn btn-warning" (click)="triggerSnapshot();">Take Image</button>
                 <!-- Snapshot Div where image will be shown -->
-                <div class="snapshot" *ngIf="webcamImage">
-                  <h2>Preview:</h2>
-                  <img [src]="webcamImage.imageAsDataUrl"/>
-                </div>
+                
             </div>
               <div class="col-lg-8 col-md-6 col-sm-5 col-12">
                   <!-- <img style="height:15rem; width: 15rem; float: rigth;" [src]="mandiImage.file" > -->
@@ -200,6 +216,10 @@
                       *ngIf="employeeId==0 || employeeImage.file!=null">
                   <img style="height:15rem; width: 15rem; float: rigth;" [src]="imageUrl"
                       *ngIf="employeeId!=0 && employeeImage.file==null">
+                      <div class="snapshot" *ngIf="webcamImage">
+                        <h2>Preview:</h2>
+                        <img style="height:15rem; width: 25rem; float: rigth;" [src]="webcamImage.imageAsDataUrl"/>
+                      </div>
               </div>
           </div>
           <div class="row form-group mt-5 mb-5">
