--- a/src/app/order-sub-system/checkout/checkout/checkout.component.html
+++ b/src/app/order-sub-system/checkout/checkout/checkout.component.html
@@ -50,7 +50,7 @@
                   <thead style="background-color: rgb(71, 142, 235);">
                     <tr>
                       <th scope="col">Product Name</th>
-                      <th scope="col">Category</th>
+                      <th scope="col">Product Type</th>
                       <th scope="col">Size</th>
                       <th scope="col">Price</th>
                       <th scope="col">Ordered Quantity</th>
