--- a/src/app/order-sub-system/delivery-type/delivery-type/delivery-type.component.html
+++ b/src/app/order-sub-system/delivery-type/delivery-type/delivery-type.component.html
@@ -11,7 +11,7 @@
           </div>
           <div class="col-lg-4 col-md-3 col-sm-6 col-12">
               <span class="input-group" style="float: right;">
-                  <input type="text" class="form-control" placeholder="Username" aria-label="enquiry type" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+                  <input type="text" class="form-control" placeholder="Search for the delivery type here" aria-label="enquiry type" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
                   <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
               </span>
           </div>
