--- a/src/app/product-sub-system/product-list/product-list.component.html
+++ b/src/app/product-sub-system/product-list/product-list.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-12">
             <span class="input-group" style="float: right;">
-                <input type="text" class="form-control" placeholder="Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+                <input type="text" class="form-control" placeholder="Search for the product here" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
                 <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
                 <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getAllProducts()">View All</button>
             </span>
@@ -33,7 +33,7 @@
                         <thead  style="background-color: rgb(103, 186, 241);">
                           <tr>
                             <th scope="col">Product Name</th>
-                            <th scope="col">Category</th>
+                            <th scope="col">Product Type</th>
                             <th scope="col">Size</th>
                             <th scope="col">Price(R)</th>
                             <th scope="col">Actions</th>
