--- a/src/app/report-sub-system/monthly-transactional-report/monthly-transactional-report.component.html
+++ b/src/app/report-sub-system/monthly-transactional-report/monthly-transactional-report.component.html
@@ -31,15 +31,15 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let product of productData">
-                      <td scope="row">{{product.productName}}</td>
-                      <td scope="row">{{product.totalSoldPrice}}</td>
+                    <tr *ngFor="let product of productData?.soldProducts">
+                      <td scope="row">{{product?.productName}}</td>
+                      <td scope="row">{{product?.totalSoldPrice}}</td>
                     </tr>
                   </tbody>
                 </table>
               </div>
             </div>
-            <div class="mt-5 mb-5" style="display: block;" *ngIf="!(productData.length==0)">
+            <div class="mt-5 mb-5" style="display: block;" *ngIf="!(productData?.soldProducts?.length==0)">
               <canvas baseChart 
                 [datasets]="barChartData"
                 [labels]="barChartLabels"
@@ -52,21 +52,28 @@
 
             <div class="card" >
                 <div class="card-body">
-                  <div class="row">
-                    <table class="table">
-                      <thead  style="background-color: rgb(103, 186, 241);">
-                        <tr>
-                          <th scope="col">Product Name</th>
-                          <th scope="col">Average Sold Price</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr *ngFor="let product of productData">
-                          <td scope="row">{{product.productName}}</td>
-                          <td scope="row">{{(product.totalSoldPrice)/product.quantitySold}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                  <div class="card-header text-center">
+                    <h3>{{productData?.monthName}} </h3>
+                  </div>
+                  <div class="card-body">
+                    <div class="row">
+                      <table class="table">
+                        <thead  style="background-color: rgb(103, 186, 241);">
+                          <tr>
+
+                            <th scope="col">Info</th>
+                            <th scope="col">Monthly Average</th>
+
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr >
+                            <td scope="row">Average Sale</td>
+                            <td scope="row">{{productData?.monthAverage}}</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -81,7 +88,7 @@
     </div>
     <div class="row">
       <div class="co-12">
-        <button class="btn btn-primary" (click)="downloadPDF()" style="float: right;" [disabled]="productData.length==0">Download Report</button>
+        <button class="btn btn-primary" (click)="downloadPDF()" style="float: right;" [disabled]="productData?.soldProducts?.length==0">Download Report</button>
       </div>
     </div>
   </div>
