--- a/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
+++ b/src/app/Admin/Order/view-client-order-detail/view-client-order-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header text-center">
-    <h3>{{orderData?.clientName}}'s Order Detail ({{orderData?.orderId}} )</h3>
+    <h3>{{orderData?.clientName}}'s Order Details</h3>
   </div>
   <div class="card-body">
 
