--- a/src/app/client-sub-system/order-detail/order-detail.component.html
+++ b/src/app/client-sub-system/order-detail/order-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card" id="invoice">
     <div class="card-header text-center">
-      <h3>{{orderData?.clientName}}'s Order Detail ({{orderData?.orderId}} )</h3>
+      <h3>{{orderData?.clientName}}'s Order Details</h3>
     </div>
     <div class="card-body">
   
@@ -61,7 +61,7 @@
                         <td scope="row">{{product.product.productName}}</td>
                         <td scope="row">{{product.product.productTypeName}}</td>
                         <td scope="row">{{product.product.productSizeDescription}}</td>
-                        <td scope="row">R{{product.product.price | number:'.1-3'}}</td>
+                        <td scope="row">R{{product.product.price | number:'.2-4'}}</td>
                         <td scope="row">{{product.quantity}}</td>
                       </tr>
                     </tbody>
