--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,6 +62,7 @@
                             <li><a [routerLink]="'/admin/enquiry-type-detail'" class="link-dark rounded" *ngIf="roles.includes('enquiry type management')">Enquiry Type</a></li>
                             <li><a [routerLink]="'/admin/timer-config'" class="link-dark rounded" *ngIf="roles.includes('timer management')">Configure Timer</a></li>
                             <li><a [routerLink]="'/admin/roles'" class="link-dark rounded" *ngIf="roles.includes('role management')">Manage Roles</a></li>
+                            <li><a href="https://jaack-solutions-team8.github.io/" class="link-dark rounded" target="_blank">Help Site</a></li>
                             <li><a [routerLink]="'/admin/features'" class="link-dark rounded" 
                                 *ngIf="roles.includes('feature management')">Manage Features</a></li>
 
