--- a/src/app/Admin/components/admin-detail/admin-detail.component.html
+++ b/src/app/Admin/components/admin-detail/admin-detail.component.html
@@ -2,9 +2,14 @@
   <div class="card-header text-center">
     <h3>Admin Details</h3>
   </div>
+  
   <div class="card-body">
     <div class="row">
       <div class="col-2">
+      </div>
+
+      <div class= "float-{sm,md,lg,xl}-right">
+        <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=adding-of-an-admin.html" target="_blank">Help</a>
       </div>
       <div class="col-lg-4 col-md-3 col-sm-2 col-12 ">
         <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" (click)="addAdmin()">Add</button>
