--- a/src/app/Employee/employee-detail/employee-detail.component.html
+++ b/src/app/Employee/employee-detail/employee-detail.component.html
@@ -1,10 +1,13 @@
 <div class="card">
   <div  class="card-header text-center">
-    <h3>Employee Detail</h3>
+    <h3>Employee Details</h3>
   </div>
   <div class="card-body">
     <div class="row">
         <div class="col-2">
+        </div>
+        <div class= "float-{sm,md,lg,xl}-right">
+          <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=adding-of-an-employee.html" target="_blank">Help</a>
         </div>
       <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
         <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/employee/add/0'">Add</button>
