updated spelling and admin help

--- a/src/app/Admin/Meeting/meeting-detail/meeting-detail.component.html
+++ b/src/app/Admin/Meeting/meeting-detail/meeting-detail.component.html
@@ -16,7 +16,9 @@
     <div class="card-body">
       <div class="row mt-5 mb-5">
           <div class="col-2">
-
+            <div class= "float-{sm,md,lg,xl}-right">
+              <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=view-meeting-schedule.html" target="_blank">Help</a>
+            </div>
           </div>
         <div class="col-8">
             
