--- a/src/app/Admin/timer/timer-configuration/timer-configuration.component.html
+++ b/src/app/Admin/timer/timer-configuration/timer-configuration.component.html
@@ -11,6 +11,9 @@
                 <div  class="card-header ">
                   <h5>Timer Configuration</h5>
                 </div>
+                <div class= "float-{sm,md,lg,xl}-right">
+                  <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=timer-configuration.html" target="_blank">Help</a>
+                </div>
                 <div class="card-body">
                     <form [formGroup]="configForm">
                       <div class="row form-group">
