--- a/src/app/Admin/Client/client-list/client-list.component.html
+++ b/src/app/Admin/Client/client-list/client-list.component.html
@@ -7,6 +7,9 @@
       <div class="row">
           <div class="col-2">
           </div>
+          <div class= "float-{sm,md,lg,xl}-right">
+            <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=adding-of-a-client.html" target="_blank">Help</a>
+          </div>
         <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
             <button type="button" class="btn btn-primary" [routerLink]="'/client/add/0'" style="float: left;width: 8rem;">Add</button>
         </div>
