--- a/src/app/Admin/EnquiryType/enquiry-type-detail/enquiry-type-detail.component.html
+++ b/src/app/Admin/EnquiryType/enquiry-type-detail/enquiry-type-detail.component.html
@@ -7,12 +7,15 @@
         <div class="row">
             <div class="col-2">
             </div>
+            <div class= "float-{sm,md,lg,xl}-right">
+              <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=creating-new-enquiry-type.html" target="_blank">Help</a>
+            </div>
           <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
               <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/add-enquiry-type/0'" >Add</button>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-6 col-12">
               <span class="input-group" style="float: right;">
-                  <input type="text" class="form-control" placeholder="Username" aria-label="enquiry type" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+                  <input type="text" class="form-control" placeholder="Search for the enquiry type here" aria-label="enquiry type" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
                   <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
               </span>
           </div>
