--- a/src/app/Admin/Stock/stock-detail/stock-detail.component.html
+++ b/src/app/Admin/Stock/stock-detail/stock-detail.component.html
@@ -7,6 +7,9 @@
     <div class="row">
         <div class="col-2">
         </div>
+        <div class= "float-{sm,md,lg,xl}-right">
+          <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=adding-of-an-admin.html" target="_blank">Help</a>
+        </div>
       <div class="col-lg-4 col-md-3 col-sm-6 col-12">
           <span class="input-group" style="float: right;">
              
