--- a/src/app/Admin/teams-attendance-history/teams-attendance-history.component.html
+++ b/src/app/Admin/teams-attendance-history/teams-attendance-history.component.html
@@ -6,6 +6,9 @@
         <div class="row">
             <div class="col-2">
             </div>
+            <div class= "float-{sm,md,lg,xl}-right">
+              <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=view-team-attendance-history-process.html" target="_blank">Help</a>
+            </div>
             <div class="col-lg-4 col-md-3 col-sm-6 col-12">
               <span class="input-group" style="float: right;">
                 <input type="date" class="form-control"  [max]="today" aria-describedby="basic-addon1" [(ngModel)]="dateData">
