--- a/src/app/product-sub-system/product-list/product-list.component.html
+++ b/src/app/product-sub-system/product-list/product-list.component.html
@@ -7,6 +7,9 @@
       <div class="row">
           <div class="col-2">
           </div>
+          <div class= "float-{sm,md,lg,xl}-right">
+            <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=adding-product-process.html" target="_blank">Help</a>
+          </div>
         <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
             <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/product/add/0'" >Add</button>
         </div>
@@ -44,7 +47,7 @@
                             <td scope="row">{{product.productName}}</td>
                             <td scope="row">{{product.productTypeName}}</td>
                             <td scope="row">{{product.productSizeDescription}}</td>
-                            <td scope="row"> R{{product.price | number:'.1-3'}}</td>
+                            <td scope="row"> R{{product.price | number:'.2-4'}}</td>
                             <td scope="row">
                                 <button class="btn btn-outline-primary" (click)="editProduct(product)">View</button>
                                 <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteProduct(product)">Delete</button>
