added client help

--- a/src/app/client-sub-system/meetings/client-meeting-slots/client-meeting-slots.component.html
+++ b/src/app/client-sub-system/meetings/client-meeting-slots/client-meeting-slots.component.html
@@ -3,6 +3,9 @@
     <div  class="card-header text-center">
       <h3>Meeting Slots</h3>
     </div>
+    <div class= "float-{sm,md,lg,xl}-right">
+      <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=booking-meeting-slot.html" target="_blank">Help</a>
+    </div>
     <div class="card-body">
       <div class="row">
           <div class="col-12">
