--- a/src/app/Admin/Order/client-order-detail/client-order-detail.component.html
+++ b/src/app/Admin/Order/client-order-detail/client-order-detail.component.html
@@ -1,12 +1,15 @@
 <div class="card">
   <div class="card-header text-center">
-    <h3>Orders Detail</h3>
+    <h3>Order Detail</h3>
   </div>
   <div class="card-body">
     <div class="row mt-5">
       <div class="card">
         <div class="card-header ">
           <h5>Client Orders</h5>
+        </div>
+        <div class= "float-{sm,md,lg,xl}-right">
+          <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=view-placed-orders.html" target="_blank">Help</a>
         </div>
         <div class="card-body">
           <div class="row">
