--- a/src/app/order-sub-system/order-product/order-product/order-product.component.html
+++ b/src/app/order-sub-system/order-product/order-product/order-product.component.html
@@ -6,6 +6,9 @@
       <div class="row">
           <div class="col-2">
           </div>
+          <div class= "float-{sm,md,lg,xl}-right">
+            <a type="button" class="btn btn-info" style="float: right;width: 8rem;" href="https://jaack-solutions-team8.github.io/index.html?page=viewing-the-cart.html" target="_blank">Help</a>
+          </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-12">
             <span class="input-group" style="float: right;">
                 <input type="text" class="form-control" placeholder="Search By Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
