modified roles, product name and validation

--- a/src/app/Admin/Role/add-role/add-role.component.html
+++ b/src/app/Admin/Role/add-role/add-role.component.html
@@ -25,7 +25,7 @@
                             <div class="col-12">
                                 <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"
                                 data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{roleId==0?'Save':'Update'}}</button>
-                                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/product/size/detail'">Cancel</button>
+                                <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/roles-detail'">Cancel</button>
                             </div>
                         </div>
                     </div>
