--- a/src/app/product-sub-system/add-product/add-product.component.html
+++ b/src/app/product-sub-system/add-product/add-product.component.html
@@ -29,7 +29,7 @@
                                                                     Please enter product name.
                                                                   </span>
                                                                   <span *ngIf="productDetailForm.get('productName')?.errors?.maxlength || productDetailForm.get('productName')?.errors?.minlength">
-                                                                    The product name must be greater than 15 and less than 50 characters.
+                                                                    The product name must be at least 5 characters.
                                                                   </span>
                                                                 </span>
                                   </div>
