--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,15 +43,15 @@
                     </button>
                     <div class="collapse show" id="home-collapse">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a [routerLink]="'/admin/detail'" class="link-dark rounded"  *ngIf="roles.includes('admin management')">Admins Detail</a></li>
-                            <li><a [routerLink]="'/client/list'" class="link-dark rounded" *ngIf="roles.includes('client management')">Client Detail</a></li>
-                            <li><a [routerLink]="'/employee/detail'" class="link-dark rounded" *ngIf="roles.includes('employee management')" >Employee Detail</a></li>
+                            <li><a [routerLink]="'/admin/detail'" class="link-dark rounded"  *ngIf="roles.includes('admin management')">Admins</a></li>
+                            <li><a [routerLink]="'/client/list'" class="link-dark rounded" *ngIf="roles.includes('client management')">Clients</a></li>
+                            <li><a [routerLink]="'/employee/detail'" class="link-dark rounded" *ngIf="roles.includes('employee management')" >Employees</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/detail'" *ngIf="roles.includes('team management')">Teams</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/attendanceHistory'" *ngIf="roles.includes('team attendance management')">Team Attendance History</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/orders/all'" *ngIf="roles.includes('order management')">Orders</a></li>
                             <li><a [routerLink]="'/order/deliveryType/detail'" class="link-dark rounded" *ngIf="roles.includes('delivery type management')">Delivery Type</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/location/detail'" *ngIf="roles.includes('location management')">Locations</a></li>
-                            <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/slot-detail'" *ngIf="roles.includes('slot management')">slot Detail</a></li>
+                            <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/slot-detail'" *ngIf="roles.includes('slot management')">Slots</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/detail'" *ngIf="roles.includes('booked slot management')">Booked Slots</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/enquiry/detail'" *ngIf="roles.includes('enquiry management')">Enquiries</a></li>
                             <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/product/list'" *ngIf="roles.includes('product management')">Products</a></li>
